Many small changes: added an Add Patient button to /findPatient.jsp, fixed glitch with patient addresses not saving properly, added text to accomp search on patientDashboard, put z-index of footer back to 0 (so it goes below other divs with info on them).
git-svn-id: http://svn.openmrs.org/branches/alpha@1053 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/web/openmrs.css
+++ b/web/openmrs.css
@@ -141,7 +141,7 @@ h1, h2, h3, h4, h5 {
 	width: 100%;
 	font-size: .8em;
 	text-align: left;
-	z-index: 9;
+	z-index: 0;
 	height: 1.7em;
 	background-color: #eeeeee;
 }
